fix updater again

--- a/themes/comfyxdiscordrecolor/comfyxdiscordrecolor.theme.css
+++ b/themes/comfyxdiscordrecolor/comfyxdiscordrecolor.theme.css
@@ -8,7 +8,7 @@
  * @patreon https://www.patreon.com/sl4f
  * @website https://heartless.uno
  * @source https://github.com/SL4F/betterdiscord/tree/main/themes/comfyxdiscordrecolor
- * @updateUrl https://raw.githubusercontent.com/SL4F/betterdiscord/main/themes/comfyxdiscordrecolor/comfyxdiscordrecolor.theme.css
+ * @updateUrl https://sl4f.github.io/betterdiscord/themes/comfyxdiscordrecolor/comfyxdiscordrecolor.theme.css
  */
 
 /* Important tips
